# Rectangling-Panoramic-Images-via-Warping

./: CMakeLists.txt  README.md  Rectangling.cpp  Rectangling.h
glad/: CMakeLists.txt
glad/include/glad/: glad.h
glad/src/: glad.c
include/: Energy.h  GLproc.h  Line.h  Mesh.h  Rectangling.h  Seam.h  matrix2_output.txt  matrix_output.txt
lsd_1.6/: CMakeLists.txt
seam/: seam.cpp
